Fixed Overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ body{
 .email-panel{
     background-color: #ffffff;
     border-right: 1px solid #dee2e6;
+    height: 100vh;
     overflow: auto;
 }
 .message-panel{
